Fix button vertical align

--- a/less/etalab.less
+++ b/less/etalab.less
@@ -312,6 +312,7 @@ a.thumbnail-link {
             color: @dark_text;
             border: 0;
             padding-top: 5px;
+            vertical-align: bottom;
         }
     }
 
